# zeam

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  Dockerfile.prebuilt  LICENSE  README.md  RELEASE.md  Release-README.md  build.zig  build.zig.zon
.github/workflows/: auto-release.yml  ci.yml  risc0.yml
pkgs/: tests.zig
pkgs/api/: README.md
pkgs/api/src/: event_broadcaster.zig  events.zig  lib.zig  noop.zig  routes.zig
pkgs/beam-node/: build.zig  build.zig.zon
pkgs/chain-config/: build.zig  build.zig.zon
pkgs/chain-config/src/: config.zig
pkgs/cli/: build.zig  build.zig.zon
pkgs/cli/src/: api_server.zig  constants.zig  error_handler.zig  main.zig  metrics_server.zig  node.zig  prometheus.zig
pkgs/cli/src/test/fixtures/: validator-config.yaml  validators.yaml
pkgs/cli/test/: integration.zig
pkgs/cli/test/fixtures/: README.md  annotated_validators.yaml  config.yaml  nodes.yaml  validators.yaml
pkgs/config/: build.zig  build.zig.zon
pkgs/config/src/: lib.zig
pkgs/configs/src/: lib.zig
pkgs/configs/src/configs/: mainnet.zig  minimal.zig
pkgs/database/src/: database.zig  interface.zig  lib.zig  rocksdb.zig  test_helpers.zig
pkgs/key-manager/src/: lib.zig
pkgs/metrics/: README.md
pkgs/metrics/src/: lib.zig  noop.zig
pkgs/network/rustlibp2p-bridge/: Cargo.toml
pkgs/network/rustlibp2p-bridge/src/: lib.rs
pkgs/network/src/: ethlibp2p.zig  interface.zig  lib.zig  mock.zig  node_registry.zig
pkgs/node/: build.zig  build.zig.zon
pkgs/node/src/: chain.zig  clock.zig  constants.zig  forkchoice.zig  lib.zig  network.zig  node.zig  testing.zig  tree_visualizer.zig  utils.zig  validator.zig  validator_client.zig
pkgs/params/: build.zig  build.zig.zon
pkgs/params/src/: constant.zig  lib.zig  types.zig
pkgs/params/src/presets/: mainnet.zig  minimal.zig
pkgs/spectest/src/: fixture_kind.zig  fork.zig  generator.zig  json_expect.zig  lib.zig  skip.zig
pkgs/spectest/src/containers/: state.zig
pkgs/spectest/src/runner/: fork_choice_runner.zig  state_transition_runner.zig
pkgs/state-proving-manager/: build.zig
pkgs/state-proving-manager/src/: manager.zig
pkgs/state-transition/: build.zig  build.zig.zon
pkgs/state-transition-runtime/: build.zig  build.zig.zon
pkgs/state-transition-runtime/src/: main.zig
pkgs/state-transition-runtime/src/ceno/: ceno.ld  io.zig  lib.zig  start.s  syscalls.zig
pkgs/state-transition-runtime/src/openvm/: io.zig  lib.zig  openvm.ld  start.s
pkgs/state-transition-runtime/src/powdr/: io.zig  lib.zig  powdr.ld  start.s  syscalls.zig
pkgs/state-transition-runtime/src/powdr/host/: Cargo.toml
pkgs/state-transition-runtime/src/powdr/host/src/: lib.rs
pkgs/state-transition-runtime/src/risc0/: io.zig  lib.zig  risc0.ld  start.s  syscalls.zig
pkgs/state-transition-runtime/src/risc0/host/: Cargo.toml
pkgs/state-transition-runtime/src/risc0/host/src/: lib.rs
pkgs/state-transition-runtime/src/sp1/: lib.zig  sp1.ld  start.s  syscalls.zig
pkgs/state-transition-runtime/src/zisk/: io.zig  layout.zig  lib.zig  zisk.ld
pkgs/state-transition/src/: lib.zig  mock.zig  transition.zig  utils.zig
pkgs/testing/: signature_helpers.zig  test_xmss_cycle.zig
pkgs/tools/src/: main.zig
pkgs/types/: build.zig  build.zig.zon
pkgs/types/src/: aggregation.zig  attestation.zig  block.zig  block_signatures_testing.zig  lib.zig  mini_3sf.zig  ssz.zig  state.zig  utils.zig  validator.zig  zk.zig
pkgs/utils/src/: cast.zig  fmt.zig  fs.zig  json.zig  lib.zig  log.zig  mixin.zig  partial.zig  ssz.zig  yaml.zig
pkgs/xmss/src/: aggregate.zig  aggregation.zig  hashsig.zig  lib.zig
resources/: beam.md  calls.md  checkpoint-sync.md  explainers.md  media.md  parent-sync.md  spec-test-framework.md  zeam.md  zkp.md
rust/: Cargo.toml
rust/hashsig-glue/: Cargo.toml
rust/hashsig-glue/src/: lib.rs
rust/libp2p-glue/: Cargo.toml
rust/libp2p-glue/src/: lib.rs  logger.rs
rust/libp2p-glue/src/req_resp/: configurations.rs  error.rs  handler.rs  inbound_protocol.rs  messages.rs  mod.rs  outbound_protocol.rs  protocol_id.rs  varint.rs
rust/multisig-glue/: Cargo.toml
rust/multisig-glue/src/: lib.rs
rust/openvm-glue/: Cargo.toml
rust/openvm-glue/src/: lib.rs
rust/risc0-glue/: Cargo.toml
rust/risc0-glue/src/: lib.rs
rust/src/: lib.rs  libp2p_bridge.rs  powdr.rs  risc0.rs
rust/src/req_resp/: configurations.rs  handler.rs  outbound_protocol.rs  varint.rs
