[package]
name = "rustglue"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm = { version = "3.0.3" }
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11.2"
bincode = "1.3"
libp2p-mplex = "0.42"
futures = "0.3.31"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec", "compat"] }
tokio-io-timeout = "1.2"
unsigned-varint = { version = "0.7", features = ["codec"] }
bytes = "1"
slog = { version = "2", features = ["max_level_debug", "release_max_level_debug", "nested-values"] }
snap = "1"
sha2 = "0.9"
hex = "0.4.3"
async-trait = "0.1.86"
lazy_static = "1.5.0"
delay_map = "0.4.1"
thiserror = "2.0.11"
tracing = "0.1"
openvm-platform = { package = "openvm", git = "https://github.com/openvm-org/openvm.git", tag = "v1.3.0", features = ["std"] }
openvm-sdk = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.3.0" }
openvm-build = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.3.0" }
openvm-stark-sdk = { git = "https://github.com/openvm-org/stark-backend.git", tag = "v1.1.1" }
openvm-transpiler = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.3.0" }

[dependencies.libp2p]
version = "0.54"
default-features = false
features = ["identify", "yamux", "noise", "dns", "tcp", "tokio", "plaintext", "secp256k1", "macros", "ecdsa", "metrics", "quic", "upnp", "ping", "gossipsub"]

[lib]
crate-type = ["staticlib"]

[profile.release]
# LTO (Link Time Optimization) is disabled to avoid symbol conflicts between risc0 and openvm.
# Both define the same runtime symbols (like sys_alloc_aligned) which collide when LTO merges
# all code into a single module. Re-enable LTO if building separate binaries for each prover.
lto = false  # Set to true for single-prover builds to reduce binary size from 108MB to ~46MB
strip = "symbols"
codegen-units = 16  # Multiple units keep risc0 and openvm code separate
