[workspace]
resolver = "2"
members = [
  "libp2p-glue",
  "openvm-glue",
  "risc0-glue",
  "hashsig-glue",
  "multisig-glue",
]
default-members = ["libp2p-glue", "openvm-glue", "risc0-glue", "hashsig-glue", "multisig-glue"]

[profile.release]
# LTO (Link Time Optimization) is disabled to avoid symbol conflicts between risc0 and openvm.
# Both define the same runtime symbols (like sys_alloc_aligned) which collide when LTO merges
# all code into a single module. Re-enable LTO if building separate binaries for each prover.
lto = false  # Set to true for single-prover builds to reduce binary size from 108MB to ~46MB
strip = "symbols"
codegen-units = 16  # Multiple units keep risc0 and openvm code separate

# Optimized profile for OpenVM-only builds (maximum size reduction)
[profile.openvm-release]
inherits = "release"
lto = "off"          # Disable LTO on macOS due to linker issues, keeps symbols separate
opt-level = "z"      # Optimize for size instead of speed
codegen-units = 1    # Better optimization (slower compilation)
panic = "abort"      # Remove unwinding code for smaller binary

# Optimized profile for RISC0-only builds (maximum size reduction)
[profile.risc0-release]
inherits = "release"
lto = "off"          # Disable LTO on macOS due to linker issues, keeps symbols separate
opt-level = "z"      # Optimize for size instead of speed
codegen-units = 1    # Better optimization (slower compilation)
panic = "abort"      # Remove unwinding code for smaller binary
