[package]
name = "hashsig-glue"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.9"
hashsig = { git = "https://github.com/b-wagn/hash-sig", rev = "7dd0694a0c732da49b9b1d2f630c11e9e0d70c14" }
rand = "0.9.2"
rand_chacha = "0.9.0"
thiserror = "2.0.17"
bincode = { version = "2.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
crate-type = ["staticlib"]
name = "hashsig_glue"
