[package]
name = "hashsig-glue"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.9"
leansig = { git = "https://github.com/leanEthereum/leanSig", rev = "3f1117fb41fbe77d7e6bc5501ca7a1b5741ce672" }
rand = "0.9.2"
rand_chacha = "0.9.0"
thiserror = "2.0.17"
bincode = { version = "2.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
crate-type = ["staticlib"]
name = "hashsig_glue"
