[package]
name = "hashsig-glue"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.9"
leansig = { git = "https://github.com/leanEthereum/leanSig", rev = "397e7cc9bf405d788bfd34cee9fe8b427a464074" }
rand = "0.9.2"
rand_chacha = "0.9.0"
thiserror = "2.0.17"
ssz = { package = "ethereum_ssz", version = "0.10" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
crate-type = ["staticlib"]
name = "hashsig_glue"
