[package]
name = "libp2p-glue"
version = "0.1.0"
edition = "2021"

[dependencies]
# serde = { version = "1.0", features = ["derive"] }
libp2p-mplex = "0.42"
futures = "0.3.31"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec", "compat"] }
tokio-io-timeout = "1.2"
unsigned-varint = { version = "0.7", features = ["codec"] }
bytes = "1"
# slog = { version = "2", features = ["max_level_debug", "release_max_level_debug", "nested-values"] }
snap = "1"
sha2 = "0.9"
hex = "0.4.3"
async-trait = "0.1.86"
lazy_static = "1.5.0"
delay_map = "0.4.1"
thiserror = "2.0.11"
tracing = "0.1"

[dependencies.libp2p]
version = "0.54"
default-features = false
features = ["identify", "yamux", "noise", "dns", "tcp", "tokio", "plaintext", "secp256k1", "macros", "ecdsa", "metrics", "quic", "upnp", "ping", "gossipsub"]

[lib]
crate-type = ["staticlib"]
