[package]
name = "multisig-glue"
version = "0.1.0"
edition = "2021"

[dependencies]
rec_aggregation = { git = "https://github.com/leanEthereum/leanMultisig.git", rev = "52e270cf45655a7abe39a05c0b6cdee309f44480" }
leansig = { git = "https://github.com/leanEthereum/leansig.git" }
whir-p3 = { git = "https://github.com/TomWambsgans/whir-p3", branch = "lean-vm-simple" }
p3-koala-bear = { git = "https://github.com/TomWambsgans/Plonky3.git", branch = "lean-vm-simple" }

[lib]
crate-type = ["staticlib"]
name = "multisig_glue"
